--- a/server/package.json
+++ b/server/package.json
@@ -4,19 +4,27 @@
   "description": "backend apis and algos for plat",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "transpile": "npx tsc",
-    "start": "npx tsc && node dist/index.js"
+    "start": "npx tsc && node dist/index.js",
+    "mock": "prism mock swagger/fdxapi.customer.yaml"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@stoplight/prism-cli": "^4.10.5",
+    "@types/jest": "^29.2.2",
+    "@types/koa__router": "^12.0.0",
+    "@types/koa-static": "^4.0.2",
+    "@types/node-fetch": "^2.6.2",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   },
   "dependencies": {
     "@koa/router": "^12.0.0",
-    "@types/koa__router": "^12.0.0",
     "koa": "^2.13.4",
-    "koa-static": "^5.0.0"
+    "koa-static": "^5.0.0",
+    "node-fetch": "^2.6.7"
   }
 }
