--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "plat-mvp",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://127.0.0.1:3001",
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/material": "^5.10.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,7 +26,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prod-start": "cd server && npm run start"
+    "install-all": "npm ci && cd server && npm ci && cd ..",
+    "server-start": "cd server && npm run start",
+    "mock-fdx": "cd server && npm run mock"
   },
   "eslintConfig": {
     "extends": [
