--- a/server/package.json
+++ b/server/package.json
@@ -13,11 +13,13 @@
   "license": "ISC",
   "devDependencies": {
     "@stoplight/prism-cli": "^4.10.5",
+    "@types/dateformat": "^5.0.0",
     "@types/jest": "^29.2.2",
     "@types/koa__router": "^12.0.0",
     "@types/koa-static": "^4.0.2",
     "@types/node-fetch": "^2.6.2",
     "jest": "^29.3.1",
+    "timezone-mock": "^1.3.4",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   },
