--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@koa/router": "^12.0.0",
+    "dotenv": "^16.0.3",
     "koa": "^2.13.4",
     "koa-static": "^5.0.0",
     "node-fetch": "^2.6.7"
