better dev experience, simplified README, customer name rather than clark kent

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "plat-mvp",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://127.0.0.1:3001",
+  "proxy": "http://127.0.0.1:3002",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -18,18 +18,18 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "export PORT=3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "install-all": "npm ci && cd server && npm ci && cd ..",
     "server-start": "cd server && npm run start",
-    "mock-fdx": "cd server && npm run mock"
+    "server-dev": "cd server && npm run dev"
   },
   "eslintConfig": {
     "extends": [
