--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,7 @@
     "@koa/router": "^12.0.0",
     "dotenv": "^16.0.3",
     "koa": "^2.13.4",
-    "koa-static": "^5.0.0",
+    "koa-send": "^5.0.1",
     "node-fetch": "^2.6.7"
   }
 }
